<resources>
    <string name="app_name">Boilr</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="alarm_settings">Alarm Settings</string>
    <string name="add_alarm">Add alarm</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="boilr_settings">Boilr Settings</string>
    <string name="about_title">About Boilr</string>
    <string name="release_notes">Release notes</string>
    <string name="ok">OK</string>
    <string name="about_version">Version: </string>
    <string name="about_website">Website: </string>
    <string name="about_developers">Developers: </string>
    <string name="about_concept">Concept and Design: </string>
    <string name="about_bugs">Bugs and feature requests: </string>
    <string name="about_donations">Donations: </string>
    <string name="about_license">License: </string>
    <string name="about_libraries">Libraries we use: </string>
    <string name="changelog_header_version">"Version "</string>
    <string name="boilr_website">http://boilr.mobi</string>
    <string name="andre_filipe_santos"><a href="https://github.com/andrefbsantos">André Filipe Santos</a></string>
    <string name="david_ludovino"><a href="https://github.com/dllud">David Ludovino</a></string>
    <string name="ricardo_duarte"><a href="http://vimeo.com/ricardoduarte">Ricardo Duarte</a></string>
    <string name="github_issues"><a href="https://github.com/andrefbsantos/boilr/issues">GitHub issues</a></string>
    <string name="btc_addr"><a href="bitcoin:1PHuSWfuAwR6oz9qV93rTdMVozfM85Qqxx">1PHuSWfuAwR6oz9qV93rTdMVozfM85Qqxx</a> (BTC)</string>
    <string name="btc_link">bitcoin:1PHuSWfuAwR6oz9qV93rTdMVozfM85Qqxx</string>
    <string name="gplv3">GNU GPLv3+</string>
    <string name="lib_list"><a href="https://github.com/andrefbsantos/libdynticker">libdynticker</a> <a href="https://github.com/andrefbsantos/libpricealarm">libpricealarm</a> <a href="https://github.com/gabrielemariotti/changeloglib">changeloglib</a></string>
    <string name="pref_title_alerts">Alerts</string>
    <string name="pref_title_default_alert_type">Default type</string>
    <string-array name="pref_entries_alert_type">
        <item>Alarm</item>
        <item>Notification</item>
        <item>Ringtone</item>
    </string-array>
    <string-array name="pref_values_alert_type">
        <item>4</item>
        <item>2</item>
        <item>1</item>
    </string-array>
    <string name="pref_default_alert_type">4</string>
    <string name="pref_title_default_alert_sound">Default sound</string>
    <string name="pref_title_vibrate_default">Vibrate by default</string>
    <string name="pref_title_sound_volume">Sound volume</string>
    <string name="pref_summary_sound_volume">Boilr uses the system volume for the selected Alert type. On most devices, the Alarm type is set to full volume even when the phone is set to silent.</string>
    <string name="cancel">Cancel</string>
    <string name="system_volumes">System volumes</string>
    <string name="pref_title_appearance">Appearance</string>
    <string name="pref_title_theme">Theme</string>
    <string-array name="pref_entries_theme">
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string-array name="pref_values_theme">
        <item>dark</item>
        <item>light</item>
    </string-array>
    <string name="pref_default_theme">dark</string>
    <string name="pref_title_network_usage">Network usage</string>
    <string name="pref_title_mobile_data">Mobile data</string>
    <string name="pref_title_show_internet_warning">Show no internet warning</string>
    <string name="pref_title_default_update_interval">Default update interval</string>
    <string name="pref_summary_default_update_interval">In seconds. Defines how often a price hit alarm gets data from the exchange. You can set another interval for a particular alarm on its settings.</string>
    <string name="pref_title_default_time_frame">Default time frame</string>
    <string name="pref_summary_default_time_frame">In minutes. Defines the default time frame for price change alarms. You can set another time frame for a particular alarm on its settings.</string>
    <string name="pref_title_check_pairs_interval">Check for new pairs</string>
    <string-array name="pref_entries_check_pairs_interval">
        <item>Hourly</item>
        <item>Twice a day</item>
        <item>Daily</item>
        <item>Every other day</item>
        <item>Weekly</item>
        <item>Fortnightly</item>
    </string-array>
    <string-array name="pref_values_check_pairs_interval">
        <item>3600000</item>
        <item>43200000</item>
        <item>86400000</item> 
        <item>172800000</item>
        <item>604800000</item>
        <item>1209600000</item>
    </string-array>
    <string name="pref_default_check_pairs_interval">604800000</string>
    <string name="pref_type_title">Alarm type</string>
    <string-array name="pref_type_entries">
        <item>Price hit</item>
        <item>Price change</item>
    </string-array>
    <string-array name="pref_type_entries_values">
        <item>price_hit</item>
        <item>price_change</item>
    </string-array>
    <string name="pref_type_default">price_hit</string>
    <string name="pref_exchange_title">Exchange</string>
    <string-array name="pref_exchange_entries">

        <item>796 Exchange</item>
        <item>Allcoin</item>
        <item>ANX</item>
        <item>Atomic Trade</item>
        <item>BitBay</item>
        <item>Bitcoin.de</item>
        <item>Bitcurex</item>
        <item>Bitfinex</item>
        <item>BitMarket.pl</item>
        <item>Bitspark</item>
        <item>Bitstamp</item>
        <item>Bittrex</item>
        <item>BleuTrade</item>
        <item>BTC100</item>
        <item>BTC38</item>
        <item>BTC China</item>
        <item>BTC Markets</item>
        <item>BTC-E</item>
        <item>BtcTrade</item>
        <item>BTER</item>
        <item>BullionVault</item>
        <item>CampBX</item>
        <item>Cavirtex</item>
        <item>C-CEX</item>
        <item>CCEDK</item>
        <item>CEX.IO</item>
        <item>CHBTC</item>
        <item>Cryptonit</item>
        <item>Cryptsy</item>
        <item>Coinbase</item>
        <item>CoinMkt</item>
        <item>Coin-Swap</item>
        <item>Coins-E</item>
        <item>HitBTC</item>
        <item>Huobi</item>
        <item>itBit</item>
        <item>Kraken</item>
        <item>LakeBTC</item>
        <item>LocalBitcoins</item>
        <item>Melotic</item>
        <item>Mulcoin</item>
        <item>OKCoin</item>
        <item>OneWorldCoin</item>
        <item>Paymium</item>
        <item>Poloniex</item>
        <item>Vircurex</item>
        <item>Yunbi</item>
    </string-array>
    <string-array name="pref_exchange_entries_values">

        <item>mobi.boilr.libdynticker.exchanges.E796Exchange</item>
        <item>mobi.boilr.libdynticker.exchanges.AllcoinExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.ANXExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.AtomicTradeExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.BitBayExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.BitcoindeExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.BitcurexExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.BitfinexExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.BitMarketPlExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.BitsparkExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.BitstampExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.BittrexExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.BleuTradeExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.BTC100Exchange</item>
        <item>mobi.boilr.libdynticker.exchanges.BTC38Exchange</item>
        <item>mobi.boilr.libdynticker.exchanges.BTCChinaExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.BTCMarketsExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.BTCEExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.BtcTradeExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.BTERExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.BullionVaultExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.CampBXExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.CavirtexExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.CCEXExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.CCEDKExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.CEXIOExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.ChbtcExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.CryptonitExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.CryptsyExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.CoinbaseExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.CoinMktExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.CoinswapExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.CoinsEExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.HitBTCExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.HuobiExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.ItBitExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.KrakenExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.LakeBTCExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.LocalBitcoinsExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.MeloticExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.MulcoinExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.OKCoinExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.OneWorldCoinExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.PaymiumExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.PoloniexExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.VircurexExchange</item>
        <item>mobi.boilr.libdynticker.exchanges.YunbiExchange</item>
    </string-array>
    <string name="pref_exchange_default">mobi.boilr.libdynticker.exchanges.E796Exchange</string>
    <string name="pref_pair_title">Pair</string>
    <string name="action_send_now">Save</string>
    <string name="pref_title_alarm_alert_type">Alert type</string>
    <string name="pref_title_alarm_alert_sound">Sound</string>
    <string name="pref_title_alarm_vibrate">Vibrate</string>
    <string name="pref_title_generic">General</string>
    <string name="pref_title_specific">Specific</string>
    <string name="pref_title_upper_limit">Upper limit</string>
    <string name="pref_title_lower_limit">Lower limit</string>
    <string name="pref_title_spike_alert">Spike alert</string>
    <string name="pref_title_change_in_percentage">Change in percentage</string>
    <string name="pref_title_change_value">Change</string>
    <string name="pref_title_update_interval">Update interval</string>
    <string name="pref_title_time_frame">Time frame</string>
    <string name="pref_title_last_value">Last price</string>
    <string name="pref_summary_update_interval">In seconds. Defines how often the hit alarm gets data from the exchange.</string>
    <string name="pref_summary_time_frame">In minutes. Defines the time frame for the price change alarm.</string>
    <string name="boilr_alarm">Boilr Alarm</string>
    <string name="turn_off">Turn off</string>
    <string name="keep_monitoring">Keep monitoring</string>
    <string name="no_internet">Boilr has no internet</string>
    <string name="no_updates">Your alarms cannot be updated.</string>
    <string name="pref_title_language">Language</string>
</resources>