<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:boilr="http://schemas.android.com/apk/res-auto">
 	<PreferenceCategory
 	    android:key="pref_key_alerts"
		android:title="@string/pref_title_alerts">
		<ListPreference
			android:key="pref_key_default_alert_type"
			android:title="@string/pref_title_default_alert_type"
			android:entries="@array/pref_entries_alert_type"
			android:entryValues="@array/pref_values_alert_type"
			android:defaultValue="@string/pref_default_alert_type" />
		<mobi.boilr.boilr.preference.ThemableRingtonePreference
			android:key="pref_key_default_alert_sound"
			android:title="@string/pref_title_default_alert_sound"
			boilr:showDefault="false"/>
		<mobi.boilr.boilr.preference.VolumePreference
		    android:key="pref_key_sound_volume"
			android:title="@string/pref_title_sound_volume"
			android:dialogMessage="@string/pref_summary_sound_volume"
			android:negativeButtonText="@string/cancel"
			android:positiveButtonText="@string/system_volumes"/>
		<CheckBoxPreference
		    android:key="pref_key_vibrate_default"
			android:title="@string/pref_title_vibrate_default"
			android:defaultValue="true" />
	</PreferenceCategory>
 	<PreferenceCategory
 	    android:key="pref_key_appearance"
		android:title="@string/pref_title_appearance">
		<ListPreference
			android:key="pref_key_theme"
			android:title="@string/pref_title_theme"
			android:entries="@array/pref_entries_theme"
			android:entryValues="@array/pref_values_theme"
			android:defaultValue="@string/pref_default_theme" />
		<ListPreference
			android:key="pref_key_language"
			android:title="@string/pref_title_language"
			android:entries="@array/pref_entries_language"
			android:entryValues="@array/pref_values_language"
			android:defaultValue="" />
	</PreferenceCategory>
	<PreferenceCategory
 	    android:key="pref_key_network_usage"
		android:title="@string/pref_title_network_usage">
		<SwitchPreference
		    android:key="pref_key_mobile_data"
			android:title="@string/pref_title_mobile_data"
			android:defaultValue="true" />
		<EditTextPreference
		    android:key="pref_key_default_update_interval"
			android:title="@string/pref_title_default_update_interval"
			android:dialogMessage="@string/pref_summary_default_update_interval"
			android:inputType="number"
			android:defaultValue="30" />
		<EditTextPreference
		    android:key="pref_key_default_time_frame"
			android:title="@string/pref_title_default_time_frame"
			android:dialogMessage="@string/pref_summary_default_time_frame"
			android:inputType="number"
			android:defaultValue="15" />
		<ListPreference
			android:key="pref_key_check_pairs_interval"
			android:title="@string/pref_title_check_pairs_interval"
			android:entries="@array/pref_entries_check_pairs_interval"
			android:entryValues="@array/pref_values_check_pairs_interval"
			android:defaultValue="@string/pref_default_check_pairs_interval" />
	</PreferenceCategory>
</PreferenceScreen>