<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:boilr="http://schemas.android.com/apk/res-auto" >
    <PreferenceCategory
        android:key="pref_key_generic"
        android:title="@string/pref_title_generic" >
        <mobi.boilr.boilr.preference.SearchableListPreference
            android:defaultValue="@string/pref_exchange_default"
            android:entries="@array/pref_exchange_entries"
            android:entryValues="@array/pref_exchange_entries_values"
            android:key="pref_key_exchange"
            android:title="@string/pref_exchange_title"
            android:persistent="false" />
        <mobi.boilr.boilr.preference.SearchableListPreference
            android:key="pref_key_pair"
            android:title="@string/pref_pair_title"
            android:persistent="false" />
        <EditTextPreference
            android:key="pref_key_last_value"
            android:title="@string/pref_title_last_value"
            android:persistent="false"
            android:selectable="false" />
        <ListPreference
            android:defaultValue="@string/pref_type_default"
            android:entries="@array/pref_type_entries"
            android:entryValues="@array/pref_type_entries_values"
            android:key="pref_key_type"
            android:title="@string/pref_type_title"
            android:persistent="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_specific"
        android:title="pref_title_specific" >
        <EditTextPreference
		    android:key="pref_key_upper_value"
			android:title="@string/pref_title_upper_limit"
			android:inputType="numberDecimal"
			android:defaultValue=""
			android:persistent="false"/>
        <EditTextPreference
		    android:key="pref_key_lower_value"
			android:title="@string/pref_title_lower_limit"
			android:inputType="numberDecimal"
			android:defaultValue=""
			android:persistent="false"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_change_in_percentage"
            android:title="@string/pref_title_change_in_percentage"
            android:persistent="false" />
        <EditTextPreference
		    android:key="pref_key_change_value"
			android:title="@string/pref_title_change_value"
			android:inputType="numberDecimal"
			android:defaultValue=""
			android:persistent="false" />
        <EditTextPreference
		    android:key="pref_key_time_frame"
			android:title="@string/pref_title_time_frame"
			android:dialogMessage="@string/pref_summary_time_frame"
			android:inputType="number"
			android:defaultValue=""
			android:persistent="false" />
        <EditTextPreference
		    android:key="pref_key_update_interval"
			android:title="@string/pref_title_update_interval"
			android:dialogMessage="@string/pref_summary_update_interval"
			android:inputType="number"
			android:defaultValue=""
			android:persistent="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_alerts"
        android:title="@string/pref_title_alerts" >
        <ListPreference
            android:defaultValue="default"
            android:entries="@array/pref_entries_alert_type_default"
            android:entryValues="@array/pref_values_alert_type_default"
            android:key="pref_key_alarm_alert_type"
            android:title="@string/pref_title_alarm_alert_type"
            android:persistent="false" />
        <mobi.boilr.boilr.preference.ThemableRingtonePreference
            android:key="pref_key_alarm_alert_sound"
            android:title="@string/pref_title_alarm_alert_sound"
            boilr:showDefault="true"
            android:persistent="false" />
        <ListPreference
            android:defaultValue="default"
            android:entries="@array/pref_entries_alarm_vibrate"
            android:entryValues="@array/pref_values_alarm_vibrate"
            android:key="pref_key_alarm_vibrate"
            android:title="@string/pref_title_alarm_vibrate"
            android:persistent="false" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_snooze_on_retrace"
            android:title="@string/pref_title_snooze_on_retrace"
            android:persistent="false" />
    </PreferenceCategory>
</PreferenceScreen>