<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="8dp"
	android:paddingRight="8dp"
	android:paddingTop="6dp"
	android:paddingBottom="6dp"
	android:baselineAligned="false"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">

		<TextView
		    android:text="@string/about_version"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<TextView
		    android:id="@+id/version"
			android:paddingLeft="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">

		<TextView
		    android:id="@+id/about_website"
			android:text="@string/about_website"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<TextView
		    android:id="@+id/boilr_website"
			android:text="@string/boilr_website"
			android:autoLink="web"
			android:paddingLeft="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal"
		android:paddingBottom="10dp">

		<TextView
		    android:id="@+id/about_bugs"
			android:text="@string/about_bugs"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
			
	    <TextView
		    android:id="@+id/github_issues"
			android:text="@string/github_issues"
			android:paddingLeft="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">

		<TextView
		    android:id="@+id/authors"
			android:linksClickable="true"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal"
		android:paddingBottom="10dp">
		
	    <TextView
			android:id="@+id/about_donations"
			android:text="@string/about_donations"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<TextView
		    android:id="@+id/btc_addr"
			android:text="@string/btc_addr"
			android:textIsSelectable="true"
			android:clickable="true"
			android:paddingLeft="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">

		<TextView
		    android:id="@+id/about_license"
		    android:text="@string/about_license"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<TextView
		    android:id="@+id/gplv3"
			android:text="@string/gplv3"
			android:paddingLeft="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">

		<TextView
		    android:id="@+id/about_libraries"
			android:text="@string/about_libraries"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
			
	    <TextView
		    android:id="@+id/lib_list"
			android:text="@string/lib_list"
			android:paddingLeft="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>
</LinearLayout>
