<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="mobi.boilr.boilr.AlarmList" >
	
	<item
		android:id="@+id/action_search"
		android:actionViewClass="android.widget.SearchView"
		android:icon="?attr/ic_action_search"
		android:showAsAction="always"
		android:title="@string/action_search"/>
	
	<item
	    android:id="@+id/action_refresh_alarms"
	    android:icon="?attr/ic_action_refresh"
		android:title="@string/refresh_alarms"
		android:showAsAction="always" />
	
	<item
	    android:id="@+id/action_add_alarm"
	    android:icon="?attr/ic_action_new"
		android:title="@string/add_alarm"
		android:showAsAction="always" />
	
	<item
	    android:id="@+id/action_settings"
	    android:icon="?attr/ic_action_settings"
		android:title="@string/action_settings"
		android:showAsAction="never" />
	
	<item
	    android:id="@+id/action_about"
	    android:icon="?attr/ic_action_about"
		android:title="@string/action_about"
		android:showAsAction="never" />
</menu>